# ubr

./: CMakeLists.txt  README.md
src/assembler/: CMakeLists.txt  b0.s  b1.s  b2.s  b3.s  b4.s  b5.s  main.cc  t.s
src/assembler/align_directive/: align_directive.cc  align_directive.h
src/assembler/assembler/: assembler.cc  assembler.h
src/assembler/binary_output/: binary_output.cc  binary_output.h
src/assembler/command/: command.cc  command.h
src/assembler/data_directive/: data_directive.cc  data_directive.h
src/assembler/instruction/: instruction.cc  instruction.h
src/assembler/label/: label.cc  label.h
src/assembler/module/: module.cc  module.h
src/assembler/parser/: parser.cc  parser.h
src/assembler/scanner/: scanner.cc  scanner.h
src/assembler/section/: section.cc  section.h
src/assembler/symbol/: symbol.cc  symbol.h
src/assembler/symbol_table/: symbol_table.cc  symbol_table.h
src/assembler/token/: token.cc  token.h
src/assembler/value/: value.cc  value.h
src/emulator/: CMakeLists.txt  main.cc
src/emulator/device/: device.cc  device.h
src/emulator/emulator/: emulator.cc  emulator.h
src/emulator/memory/: memory.cc  memory.h
src/emulator/memory_manager/: memory_manager.cc  memory_manager.h
src/emulator/processor/: processor.cc  processor.h
src/opcodes/: opcodes.h
src/utils/: utils.cc  utils.h
